@@ -1448,6 +1448,13 @@ int set_job_env(
     strcat(job_env, c);
     }
 
+/*
+ * Commented out by dbeer
+ * This isn't a reliable way to find the hostname because it doesn't
+ * account for the interface over which the connection is happening,
+ * or any aliasing on that interface. Letting the server discover 
+ * PBS_O_HOST works better and the code is already there.
+ *
   if (qsub_host[0] != '\0' ||
      (rc = gethostname(qsub_host, PBS_MAXHOSTNAME + 1)) == 0)
     {
@@ -1457,6 +1464,7 @@ int set_job_env(
       strcat(job_env, qsub_host);
       }   
     }
+*/
     
   if (rc != 0)
     {
